--- a/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.en-US.resx
@@ -423,10 +423,10 @@
   <data name="VectorDataObsolete" xml:space="preserve">
     <value>Use VectorAnalysisDisplay.ByViewPointsAndVectorValues instead.</value>
   </data>
-  <data name="NoSubComponents" xml:space="preserve">
-    <value>Element has no sub components</value>
+  <data name="NoChildElements" xml:space="preserve">
+    <value>Element has no child Elements</value>
   </data>
-  <data name="NoSuperComponent" xml:space="preserve">
+  <data name="NoParentElement" xml:space="preserve">
     <value>Element has no parent component</value>
   </data>
 </root>
