--- a/src/Libraries/RevitNodesUI/Properties/Resources.resx
+++ b/src/Libraries/RevitNodesUI/Properties/Resources.resx
@@ -389,4 +389,19 @@
   <data name="PortDataViewToolTip" xml:space="preserve">
     <value>The View</value>
   </data>
+  <data name="PortDataNotEnclosedRoomsToolTip" xml:space="preserve">
+    <value>Not Enclosed Rooms in the document</value>
+  </data>
+  <data name="PortDataPlacedRoomsToolTip" xml:space="preserve">
+    <value>Placed Rooms in the document</value>
+  </data>
+  <data name="PortDataRedundantRoomsToolTip" xml:space="preserve">
+    <value>Redundant Rooms in the document</value>
+  </data>
+  <data name="PortDataUnplacedRoomsToolTip" xml:space="preserve">
+    <value>Unplaced Rooms in the document</value>
+  </data>
+  <data name="RoomsByStatusDescription" xml:space="preserve">
+    <value>Returns all rooms in the document grouped by status</value>
+  </data>
 </root>
