--- a/src/Libraries/RevitNodes/Properties/Resources.resx
+++ b/src/Libraries/RevitNodes/Properties/Resources.resx
@@ -459,4 +459,7 @@
   <data name="NonIntersectingElements" xml:space="preserve">
     <value>Elements are not intersecting</value>
   </data>
+  <data name="DocumentNotWorkshared" xml:space="preserve">
+    <value>Current Document is not workshared</value>
+  </data>
 </root>
