Document.purge unused (#20)
* PurgeUnused node

* PurgeUnused tests

* add recursive function

* Update Document.cs

* node can now purge materials and material assets

* comment update

* add null check if deeppurge is false

* update tests

* Update src/Libraries/RevitNodes/Application/Document.cs

Co-Authored-By: Radu Gidei <radumg@users.noreply.github.com>

* Update src/Libraries/RevitNodes/Application/Document.cs

Co-Authored-By: Radu Gidei <radumg@users.noreply.github.com>

* comment updates

* rename deepPurge to fullPurge

* comment updates

* Update Document.cs

* comment updates

* small fixes

Co-authored-by: Radu Gidei <radumg@users.noreply.github.com>

--- a/src/DynamoRevitIcons/RevitNodesImages.resx
+++ b/src/DynamoRevitIcons/RevitNodesImages.resx
@@ -10009,4 +10009,51 @@
         KpMAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="Revit.Application.Document.PurgeUnused.Large" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGEAAABhCAYAAADGBs+jAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAYDSURBVHhe7ZzRShxXHMbzCD6Cj+CNIWk2Ro1W19UqEkKw
+        FFJKe1FKkZaiUFAvWnq1paCGXJWA0YCFEulFWkjEvkEewYve2dC9SUpo6fT/LZ7l7PHb3dnd/5w5456L
+        H7jfzKznfD93zuxkN1eSJInkDA0jfqFhxC80jPiFhhG/0DDiFxpG/ELDiF9oGPELDSN+oWHELzSM+IWG
+        Eb/QMOIXGkb8QsOIX2iYNYeHhyPCuAeG2e8PDRpmgRQyJGwJNSHxyH02npCgoTZSBP7yT61ifBO0CBpq
+        IgVAgO+/fkawImioiUy+6RWwv7//z9raWrK8vJwZOzs7dvk2QYqgoRaYtF3C7u7uv1NTU8no6GimVKtV
+        u3iX4ETQUAuZ8Eu7gEqlQkvTpoMEEJQIGmphT1yKOWOFZYEtAT9vbGw0HlsEI4KGGsgkh+1Jr6+vn7LC
+        ssCVgCxkETTUQCaIN0uNCectAYQqgoYayOSCkwBCFEFDDWRiQUoAoYmgoQYyqWAlgBYifmBzyRoaaiAT
+        CloCaCHiEZtPltBQA5lM8BJACCJoqIFMpBASQN4iaKiBTKIwEkCeImiogUwgCAl7e3upb5fkJYKGGsjg
+        c5PQosx+2GJz1IKGGsjAc5OAO7X271agxuaoBQ01kIHnJgGsrKzUT0X2GPrBnZ8mNNRABp6rBFAqleoy
+        VldXu2Z7e/sve/zu/DShoQYy8Nwl9APGa4/fnZ8mNNRABh4lpISGGsjAo4SU0FADGXiUkBIaaiADjxJS
+        QkMNZOBRQkpoqIEMPEpICQ01kIFHCSmhoQYy8CghJTTUQAaemYR7N95Jfnx3Kvl9vlznyex08mHpBt23
+        V6KENnw6drNRvgu2sWN6IUpoQTsB4LfKLD2uF6IEgiugenuyfloCdo7H7PhuiRIcmAB7u70tSrCQgatI
+        6CRg8fr1pu0z1641be+VKOGcNAKwDpjtD6ZvN23vhyhB6FYALlPHrl5t2qcfBl5C3gLAQEsIQQC4tBJw
+        5YJS8W4XfD1xq2khDUUAuHQSfnr8ODm6e+dvu2CbbybHgxIALpWEnx8+TE6WF5sK7kTeAsClkfDLd982
+        lQu+uDVWnyRKxOnI3R6CAFB4CVLW0PG9u7+a4mzcEtudhvISAAotQcoaFl6a4sDu/FzyfGHuP/M4jYg8
+        BYDCSpCyloSaKe7F4kLy+eREfVKdSnVF2PgWAAopQcrasos7qpRrKN6eWC8i8hAACiVBihoSTuzi5D3A
+        WaviuhXhLtS+KIwEKWlEOLVL25oYr7FJ2XQrQuv2dDcUQoKUc19onP+PK+U33ZTVSQQuZc02zbujaQle
+        ghTzyBQEnpZnXvVyH7+TCHnexjb7OB8EK0HKuHD5uT09+YpNIi3tRNifqHCPy5qQJTQW4OP58uvPxm6+
+        YRNAiTiFoESc39k+Nq1EmFcCtrHjsqQQEo7KM/QKCBlKNPvh1oS7D8MVYf8c1wQLKQRXQ43FGGuBLQJF
+        2udxFInMnlw7XBGGeHXkIKVQEW6BkNGNAAM+SWeeA6R9JWlTrVbPgpUApJwLImwB7lWOAX/R7f6q3VNZ
+        HqchgC8cHhwcvLUknLAetKBhGqSkJhGGVgLwDzdmH3ebAe+OzT54JbHn8QH5Mnq4XyaXsppEPK/MvmXv
+        F9x3wO52d59u1xIt8AogAvAf6w6x+WtBw26Q0tou1q4AdsmKwu19Hnzy8Z9YGH2xubn5h/u9ZYtVNm9N
+        aNgtUhwVgfO/yQBOSa4A7Pds6b3GPs+++pIVkRfF+l9epMC2i3Wru6FPFhca+7z44H1WRB7gFJT5K8BA
+        w16RIuli3UrA9/NzjX3wYQB8KsMpwyd4X3AirAqZrgEuNOwHKfSCCLZYf1Qqvbb3EcbZ8w0CNOwXKbTt
+        Yo2FGLe+zXbB20s/RGiogRRLRQDcdzK58JQdP0jQUAsp+III3Po2jwXcFvd6/g0RGmoiJdPF+jwbYccM
+        GjTUBmWfl25LWGL7DiI0zAIp3RaR6b2YokHDLIEMlg8yNIz4hYYRv9Aw4hcaRvxCw4hfaBjxCw0jfqFh
+        xCfJlf8BzbTE1V+oXb0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="Revit.Application.Document.PurgeUnused.Small" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACEAAAAhCAYAAABX5MJvAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAIPSURBVFhH7Za7TgJRFEX9BD7FBuJzHPEFjhGlslNbQ0E0
+        ComGUBg6YkNJtBEk2GBFNDHiH5j4A/Y0aqExJh7PnuSSy3iQGUbHxmLl3myGs9c8yDBERH+OGAaNGAaN
+        GAaNGAaNGDqp1+shxnRBSPp+P8RQhwcPM48M9aNWq93z6llEDHV46B0KcrkchcPhnvgREUMdDC4Wi22p
+        WAfHFQoFqlQq77yHuGsRMdTB8Gw2+yAV6+C4dDpNlmVRtVp98yIihjpeJbD3KiKGOm4l8MyUy2XcOhvs
+        8V2ISHN1xFDHrQTIZDIdCVAqlWwR50wnYqjjRcJJMpn8l7D5dYnE6ChdWjFqxBdof3qq6zPFr0oogeJM
+        lLanjOAldIEtY5Jul+K0OTH+RQD8mMT56SmdbK4/4myBUwCrJAB+RIJLzJvVZbvsLDZnAwncgn4CwLcE
+        l6RRtMdnnTKND+xRDhE3AmBgCS4IMY1rK/a6Nj7WGaguP0Twi9DLeuFHotFcjD0bkYj9wB1Gzc5QJYJb
+        sjAy0lUo4UdiA0VHs9E3rChGIaQwGA+lW4l8Po83KY/t7nAihrqI+kliBVecH6wk7LP8DiXADP4WVSIs
+        8IFbgitxsZqg5u6OfYld0mKGpfk6YqhQIilj8uV4frbN+5Z0nF/EUEeJtJbiT7x6/iftBjF0wuUm0/ey
+        DooYBo0YBo0YBgsNfQK0wkcTglWypgAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
